styled the page and populated the question area and q1 and 2 and added loop for radio buttons, might need j loop through it for values for answer array later

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- metas for phones -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Star Wars Game</title>
+    <title>Trivia Game!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- apply reset, then bootstrap, then my additional styling, then jquery library -->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
@@ -17,11 +17,115 @@
 </head>
 
 <body>
+    <section class="container bg-warning">
+        <h1 class="row header justify-content-center">Trivia Trivia Trivia!!!</h1>
 
-    
 
-    <!-- link JavaScript file -->
-    <script src="assets/JavaScript/main.js"></script>
+        <section class="quesions-section">
+            <div class="row justify-content-center">
+                <h4>Question #1 Who are the three Godesses who created the entire land of Hyrule?</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question1">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #2 What were they the Godesses of?</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question2">
+                    <li>The Hunt, Agriculture, Freedom</li>
+                    <li>Courage, Wisdom, Power</li>
+                    <li>Sky, Sea, Afterlife</li>
+                    <li>War, Arts, The Sun</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #3 </h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question3">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #4</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question4">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #5</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question5">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #6</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question6">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #7</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question7">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #8</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question8">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+            <div class="row justify-content-center">
+                <h4>Question #9</h4>
+            </div>
+            <div class="row justify-content-center">
+                <ul class="question9">
+                    <li>Ordona, Faron, Eldin</li>
+                    <li>Hylia, Lanayru, Valoo</li>
+                    <li>Farore, Naryu, Din</li>
+                    <li>Jabun, Jabu-Jabu, Levias</li>
+                </ul>
+            </div>
+        </section>
+
+
+        <!-- link JavaScript file -->
+        <script src="assets/JavaScript/main.js"></script>
 </body>
 
 </html>
