still working on getting submit button to register answer choices, but it's styled pretty well now in colors and with media query's

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
 <body>
     <section class="container bg-warning">
-        <h1 class="row header justify-content-center">Trivia Trivia Trivia!!!</h1>
+        <h1 class="row header justify-content-center">Zelda: Ocarina of Time Trivia!!!</h1>
 
-
+<!-- name of ranch that you race at to get epona -->
+<!-- name of the  girl on the ranch link is offered to marry by her father -->
         <section class="quesions-section">
             <div class="row justify-content-center">
                 <h4>Question #1 Who are the three Godesses who created the entire land of Hyrule?</h4>
@@ -45,83 +46,87 @@
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #3 </h4>
+                <h4>Question #3 What is the name of the Goron Chief's son?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question3">
-                    <li>Ordona, Faron, Eldin</li>
-                    <li>Hylia, Lanayru, Valoo</li>
-                    <li>Farore, Naryu, Din</li>
-                    <li>Jabun, Jabu-Jabu, Levias</li>
+                    <li>Goro</li>
+                    <li>Boro</li>
+                    <li>Link</li>
+                    <li>Chief Jr.</li>
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #4</h4>
+                <h4>Question #4 Who do you give the spooky mask to on the Mask of Truth sidequest?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question4">
-                    <li>Ordona, Faron, Eldin</li>
-                    <li>Hylia, Lanayru, Valoo</li>
-                    <li>Farore, Naryu, Din</li>
-                    <li>Jabun, Jabu-Jabu, Levias</li>
+                    <li>Happy Mask Salesman</li>
+                    <li>The Guard</li>
+                    <li>The Running Man</li>
+                    <li>The Graverobber's Son</li>
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #5</h4>
+                <h4>Question #5 What is Link's first sword called?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question5">
-                    <li>Ordona, Faron, Eldin</li>
-                    <li>Hylia, Lanayru, Valoo</li>
-                    <li>Farore, Naryu, Din</li>
-                    <li>Jabun, Jabu-Jabu, Levias</li>
+                    <li>Kokiri Sword</li>
+                    <li>Master Sword</li>
+                    <li>Faron Sword</li>
+                    <li>Deku Sword</li>
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #6</h4>
+                <h4>Question #6 What is the name of the best sheild that Link obtains?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question6">
-                    <li>Ordona, Faron, Eldin</li>
-                    <li>Hylia, Lanayru, Valoo</li>
-                    <li>Farore, Naryu, Din</li>
-                    <li>Jabun, Jabu-Jabu, Levias</li>
+                    <li>Deku Sheild</li>
+                    <li>Master Sheild</li>
+                    <li>Beattle Sheild</li>
+                    <li>Mirror Sheild</li>
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #7</h4>
+                <h4>Question #7 What race lives in a waterfall?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question7">
-                    <li>Ordona, Faron, Eldin</li>
-                    <li>Hylia, Lanayru, Valoo</li>
-                    <li>Farore, Naryu, Din</li>
-                    <li>Jabun, Jabu-Jabu, Levias</li>
+                    <li>The Hylian's</li>
+                    <li>The Deku</li>
+                    <li>The Gerudo</li>
+                    <li>The Zora</li>
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #8</h4>
+                <h4>Question #8 Which Boss do you fight inside Jabu-Jabu's Belly?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question8">
-                    <li>Ordona, Faron, Eldin</li>
-                    <li>Hylia, Lanayru, Valoo</li>
-                    <li>Farore, Naryu, Din</li>
-                    <li>Jabun, Jabu-Jabu, Levias</li>
+                    <li>King Dodongo</li>
+                    <li>Morpha</li>
+                    <li>Barinade</li>
+                    <li>Bongo Bongo</li>
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #9</h4>
+                <h4>Question #9 Bonus: What can you see if you look into the right halway windows when you first meet Zelda?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question9">
-                    <li>Ordona, Faron, Eldin</li>
-                    <li>Hylia, Lanayru, Valoo</li>
-                    <li>Farore, Naryu, Din</li>
-                    <li>Jabun, Jabu-Jabu, Levias</li>
+                    <li>Ganondorf</li>
+                    <li>Pictures of Zelda</li>
+                    <li>Pictures of Super Mario 64</li>
+                    <li>Pictures of the Royal Family</li>
                 </ul>
             </div>
+            <div class ="text-center">
+            <input id="submit-button" class="btn" type="submit" value="Submit">
+            </div>
         </section>
+
 
 
         <!-- link JavaScript file -->
