created the best for loop so far to but attaches 4 buttons instead of one and the values are reversed order

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </ul>
             </div>
             <div class="row justify-content-center">
-                <h4>Question #9 Bonus: What can you see if you look into the right halway windows when you first meet Zelda?</h4>
+                <h4>Question #9 Bonus: What can you see if you look into the right hallway windows when you first meet Zelda?</h4>
             </div>
             <div class="row justify-content-center">
                 <ul class="question9">
