added pause button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <div id="questions-section">
             <div class="text-center">
                 <div id="display">90 Seconds Left!</div>
-                <input id="music-button" class="btn" type="music" value="Forest Theme!">
+                <button id="music-button" class="btn" value="Forest Theme!">Forest Theme!</button>
+                <button id="pause-button" class="btn" value="Forest Theme!">Pause Music</button>
             </div>
 
             <div class="row justify-content-center">
