--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zelda OoT Trivia Game!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://www.zelda.com/assets/icons/favicon-16x16.png">
     <!-- apply reset, then bootstrap, then my additional styling, then jquery library -->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
